--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -2,18 +2,36 @@
 <html>
 <head>
 <title>Damian Hernandez/About Me</title
-</head>
-	<style type="text/css">
+<style type="text/css">
 body{
-	border-style: dashed;
-	border-width: thick;
-	border-color: green;
-	background-image: url("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj7i-mO0p3eAhVLilQKHY2TDkQQjRx6BAgBEAU&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZ9q8O4N6h6U&psig=AOvVaw1CglGz2ntjfE-3abYSeqKV&ust=1540420945433067")
+	color: green;
+	font-size: 60px;
+	font-family: Verdana, sans-serif;
+	font-weight: bolder;
+	font-style: italic;
 }
-(info)
+h1{
+	color: green;
+	font-family: Georgia, sans-serif;
+}
+#transition{
+	width:150px;
+	height: 50px;
+	background: teal;
+	transition: height 2s;
+}
+#transition:hover{
+	height: 300px;
+}
+</style>
+</head>
+<body>
+<h1> WAZZA BOIIII </h1>
+Its a website about me.
+Youtube: https://www.youtube.com/channel/UC8RhQpc7HB_GXPI_1hRAqzA
 
 <p>
-This is my favorite video: <a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid</a></p>>
+This is my favorite video: <a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid<a/><p/>>
 LEL
 Favorite Games
 <ul>
@@ -21,6 +39,13 @@ Favorite Games
 	<li>Fortnite</li>
 	<li>PUBG</li>
 	<li>Clash Royale</li>
+	<li>Clash of Clans</li>
+</ul><br>
+Favorite Foods
+<ol>
+	<li>frech fries</li>
+	<li>enchiladas</li>
+	<li>pizza</li>
 </p>
 
 </body>
