--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -46,7 +46,12 @@ Favorite Foods
 	<li>frech fries</li>
 	<li>enchiladas</li>
 	<li>pizza</li>
+	</ol>
 </p>
 
-</body>
+	<marquee> Subscribe to my YouTube channel!!! Plz be my friend!!! FOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOD
+
+	<div id=:transition"> WAZZZZZZZAAAAAAAA </div>
+	
+	</body>
 </html>
