--- a/student_11/thanksgiving.html
+++ b/student_11/thanksgiving.html
@@ -6,14 +6,14 @@ My Website
 </title>
 <style type="text/css">
 body{
-	color: orange;
+	color: black;
 	font-size: 20px;
 	font-family: Verdana, sans-serif;
 	font-weight: bolder;
 	font-style: italic;
 }
 h1{
-	color: black;
+	color: brown;
 	font-family: Georgia, sans-serif;
 }
 #transition{
