--- a/student_31/Aram About-me.html
+++ b/student_31/Aram About-me.html
@@ -6,23 +6,33 @@ THE LIFE OF ARAM
 </title>
 <style type="text/css">
 body{
+	color: white;
 	border-style: dashed;
 	border-width: thick;
 	border-color: black;
 	background-image: url("http://www.seriouswheels.com/cars/mansory/2018-mansory-ferrari-812-superfast-stallone/images/2018-Mansory-Ferrari-812-Superfast-Stallone-Studio-1-1920x1200.jpg")
 }
+#transition{
+	width:150px;
+	height: 50px;
+	background: green;
+	transition: height 2s;
+}
+#transition:hover{
+	height: 300px;
+}
+
 </style>
 </head>
 <body>
 I am Aram Arzumanyan. I am 12 years old and my friend consider me boring, funny, and sometimes weird.
 
 <p>
-The Most Popular Video
-<a href="https://www.youtube.com/watch?v=U06jlgpMtQs">The Most Popular Video!</a>
-	
+The Most<br> Popular Video
+<a href="https://www.youtube.com/watch?v=XqZsoesa55w">The Most Popular Video!</a>
 
 <a href="thanksgiving.html">Tanksgiving Page!</a>
-	
+
 <img src="https://ih1.redbubble.net/image.521720510.4916/stf,small,600x600-c,0,0,1000,1000.u1.jpg"><br>
 Favorite Foods
 <ul>
@@ -34,6 +44,9 @@ Favorite Games
 	<li>Fortnite</li>
 	<li>Roblox:)</li>
 </ol><br>
+<marquee> I am JESUS CHRIST </marquee>
+
+<div id="transition"> Transition! </div>
                                                                                                                                                                                   
 </body>
 </html>
