--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -14,7 +14,28 @@ body{
 	border-color: red;
 	background-image: url("http://getwallpapers.com/wallpaper/full/d/6/b/397186.jpg")
 }
-</style></head>
+color: green;
+	font-size: 68px;
+	font-family: Impact, Charcoal, sans-serif;
+	font-weight: bolder;
+	font-style: italic;
+}
+{
+	color: green;
+	font-family: Impact, Charcoal, sans-serif;
+}
+#transition{
+	width:150px;
+	height: 50px;
+	background: beige;
+	transition: height 2s;
+}
+#transition:hover{
+	height: 300px;
+}
+</style>
+<h1>Hello People...................../
+</head>
 <p>
 <b>These are my favorite foods to eat at Thanksgiving:
 <ol>
