--- a/student_26/ErnestThanksgiving.html
+++ b/student_26/ErnestThanksgiving.html
@@ -50,6 +50,8 @@ My 2 Nintendo Switches
 My Games
 My Computer, iPhone 7,and iPads
 </ul>
+	
+<a href="https://www.youtube.com/watch?v=1YSMLZ6XeD0"> RIP X </a>
 
 <br>
  I made this website for Thanksgiving and show how important it is.
