--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -300,7 +300,7 @@ window.onload = function(){
                     ctx.fillText('Game Over',350,250);
                     ctx.font = '20px san-serif';
                     ctx.fillStyle='#000000';
-                    ctx.fillText('To Play again Refresh the page or click the Restart button',240,300);
+                    ctx.fillText('To Play again, Refresh the page.',240,300);
                     throw ('Game Over');
             }
             else
