--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -5,6 +5,15 @@
 My Website
 </title>
 <style type="text/css">
+p{
+	border-style: solid;
+	border-color: red;
+	padding-top:15px;
+	padding-right:25px;
+	padding-bottom: 20px;
+	padding-left: 25px;
+}
+	
 body{
 	color: red;
 	font-size: 48px;
@@ -33,7 +42,9 @@ Information you will put in the body of the website
 <p>
 This is my favorite video
 <a href="https://www.w3schools.com/cssref/css_websafe_fonts.asp"> CHECK OUT THESE FONTS! </a>
-
+<p>
+This is what's up.
+</p>
 <a href="thanksgiving.html">Thanksgiving Page!</a>
 
 <img src="https://s.abcnews.com/images/Lifestyle/puppy-ht-3-er-170907_4x3_992.jpg"><br>
