--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Damian Hernandez/About Me </title
+	<title> Damian Hernandez/About Me </title>
 <style type="text/css">
 body{
 	color: green;
