--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -26,7 +26,7 @@ h1{
 </style>
 </head>
 <body>
-<h1> WAZZA BOIIII </h1>
+<h1> Link </h1>
 Its a website about me.
 Youtube: https://www.youtube.com/channel/UC8RhQpc7HB_GXPI_1hRAqzA
 
