--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -52,7 +52,7 @@ Favorite Foods
 
 	<marquee> Subscribe to my YouTube channel!!! Plz be my friend!!! FOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOD
 
-	<div id=:transition"> WAZZZZZZZAAAAAAAA </div>
+	<div id=:transition"> Swamp </div>
 	
 	</body>
 </html>
