--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -18,7 +18,7 @@ h1{
 	width:150px;
 	height: 50px;
 	background: teal;
-	transition: height 2s;
+	transition: height 2px;
 }
 #transition:hover{
 	height: 300px;
