--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -8,19 +8,19 @@ Thanksgiving
 <b>Happy Thanksgiving!</b>
 </h1/8>
 <style type="text/css">
-body{
+
+color: green;
+	font-size: 68px;
+	font-family: Impact, Charcoal, sans-serif;
+	font-weight: bolder;
+	font-style: italic;}
+p{
 	border-style: dashed;
 	border-width: 4px;
 	border-color: red;
 	background-image: url("http://getwallpapers.com/wallpaper/full/d/6/b/397186.jpg")
 }
-color: green;
-	font-size: 68px;
-	font-family: Impact, Charcoal, sans-serif;
-	font-weight: bolder;
-	font-style: italic;
-}
-{
+p{
 	color: green;
 	font-family: Impact, Charcoal, sans-serif;
 }
@@ -33,17 +33,24 @@ color: green;
 #transition:hover{
 	height: 300px;
 }
+p{
+	border-style: dashed;
+	border color: cyan;
+	padding top: 25 px;
+	padding right: 65 px:
+	padding bottom: 245 px;
+	padding left: 70 px;
+	margin: 42 px;
+}
 </style>
 <h1>Hello People...................../
 </head>
-<p>
 <b>These are my favorite foods to eat at Thanksgiving:
 <ol>
       <li><b>Turkey
       <li><b>Mashed Potatoes</li>
 </ol>
-</p>
-<p2>
+
 <b>These are some of the things I like to do at Thanksgiving:
 <ul>
        <li><b>Travel to my relative's homes</li>     
