--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,7 +4,7 @@
 <title> Ibrahim Ahmed </title>
 	<link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
     <style>
-h1{
+p{
 	border-style: solid;
 	border-color: red;
 	padding-top: 15 px;
@@ -67,7 +67,7 @@ h1 {
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=500 height=500 align=right border=10px>
 </div>
  <font size=5>
- <h1>Hello there!</h1>
+ <p>Hello there!</p>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
