--- a/student_31/Aram About-me.html
+++ b/student_31/Aram About-me.html
@@ -5,6 +5,16 @@
 THE LIFE OF ARAM
 </title>
 <style type="text/css">
+p{
+	border-style: solid;
+	border-color: pink;
+	padding-top: 15px;
+	padding-right: 50px;
+	padding-left: 50px;
+	margin: 55px;
+}
+
+
 body{
 	color: white;
 	border-style: dashed;
