--- a/student_21/thanksgiving.html
+++ b/student_21/thanksgiving.html
@@ -1,1 +1,19 @@
-
+<! DOCTYPE html>
+<html>
+<head>
+<title>My First Website</title>
+</head>
+<body>
+Thanksgiving
+<h1>I am thankful for</h1>
+<h1>My Family</h1>
+<h1>My Friends</h1>
+<h1>My home</h1>
+<h1>My food</h1>
+<h1>My ps4</h1>
+<p>I love money</p>
+<p>I am male</p>
+<p>Happy thanksgiving</p>
+<p>Thanksgiving is <b>fun</b> because of food</p>
+</body>
+</html>
