--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -27,7 +27,7 @@ h1{
 </head>
 <body>
 Hello World! This is an about me website.
-<h1>I LOVE CODING!</h1>
+<h1>I LOVE FOOD!</h1>
 <h2>WHAT IS HAPPENING</h2>
 <h3>TO THE SIZE?</h3>
 <style type="text/css">
@@ -58,17 +58,15 @@ body{
 My friends
 <ul>
 <li>rebekah</li>
-<li>Roxana</li>
 <li>lily</li>
 <li>anastashia</li>
 <li>sophia</li>
 <li>cailin</li>
-<li>anabel</li>
 <li>rina</li>
 <li>juliana</li>
 <li>valery</li>
 <li>adriana</li>
-<li>soory i got too many :)</li>
+<li>sorry i got too many :)</li>
 <ul>
 </p4>
 <p5>
