--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -31,7 +31,7 @@ Its a website about me.
 Youtube: https://www.youtube.com/channel/UC8RhQpc7HB_GXPI_1hRAqzA
 
 <p>
-This is my favorite video: <a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid<a/><p/>>
+<a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid<a/><p/>>
 LEL
 	Sub to PewDiePie
 Favorite Games
