--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -64,13 +64,12 @@ My friends
 <li>cailin</li>
 <li>rina</li>
 <li>juliana</li>
-<li>valery</li>
 <li>adriana</li>
 <li>sorry i got too many :)</li>
 <ul>
 </p4>
 <p5>
-	<marquee> hi there </marquee>
+	<marquee> hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there </marquee>
 </p5>
 <p6>what i don't like
 <ul>
