--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,7 +4,7 @@
 <title> Ibrahim Ahmed </title>
 	<link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
     <style>
-p{
+h1{
 	border-style: solid;
 	border-color: red;
 	padding-top: 15 px;
@@ -67,14 +67,14 @@ h1 {
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=500 height=500 align=right border=10px>
 </div>
  <font size=5>
- <p>Hello there!</p>
+ <h1>Hello there!</h1>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
 <body>
 <font size=5>
 	<div class="my_div">
-  <h1 class="title">
+  <h2 class="title">
         <span class="old-text">Bring your mouse over here for some info</span>
         <span class="new-text"> I am a 7th grader at Roosevelt Middle School, and my classes are: <ol> P.E.,
 		     English,
