--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -41,7 +41,7 @@ body{
 <font color="red">i love blue!</font>
 <font color="blue">wait what that wasn't blue!</font>
 <font color="green">now it is!</font>
-<font color="pink">never mind :( </font>
+<font color="black">never mind :( </font>
 <P><font color="red">I AM SO SILLY. <b>HAHAHAHAHAHA :)</b>
 
 <a href="thanksgiving.html">Thanksgiving Page!</a></P></font>
