--- a/student_27/thanksgiving.html
+++ b/student_27/thanksgiving.html
@@ -17,3 +17,4 @@ Hello World! This is my first website.
 <p>This is the <b>coolest</b> site ever!</p>
 </body>
 </html>
+This is mine now kalyeghi this is student number 1 :)
