--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -23,7 +23,8 @@ body{
 </style>
 </head>
 <body>
-<img src="https://www.epicgames.com/fortnite/en-US/battle-pass/season-6">
+	
+<img src="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fortnite-season-7-1052610.jpg?r=1543594824319">
 Yo reeeeee,<br> I am ready to give thanks are you?<br>Sike! give thanks.<br> also this is my normal website because we should always be giving thanks to other fart faces
 <p>
 These are my favorite givingthanksgiving foods:
