--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -69,7 +69,7 @@ My friends
 <ul>
 </p4>
 <p5>
-	<marquee> hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there </marquee>
+	<marquee> hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there  hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there  hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there hi there  </marquee>
 </p5>
 <p6>what i don't like
 <ul>
