--- a/student_31/Aram About-me.html
+++ b/student_31/Aram About-me.html
@@ -41,7 +41,7 @@ I am Aram Arzumanyan. I am 12 years old and my friend consider me boring, funny,
 The Most<br> Popular Video
 <a href="https://www.youtube.com/watch?v=XqZsoesa55w">The Most Popular Video!</a>
 
-<a href="thanksgiving.html">Tanksgiving Page!</a>
+<a href="Thanksgiving.html">Tanksgiving Page!</a>
 
 <img src="https://ih1.redbubble.net/image.521720510.4916/stf,small,600x600-c,0,0,1000,1000.u1.jpg"><br>
 Favorite Foods
