--- a/student_26/ErnestThanksgiving.html
+++ b/student_26/ErnestThanksgiving.html
@@ -13,7 +13,13 @@ body {
   background-position: left top;
   margin-top: 200px;
 }
-
+	
+  padding-top: 15 px;
+  padding-right: 50 px;
+  padding-bottom: 200 px;
+  padding-left: 100 px;
+  margin: 55 px;
+	
 p.bordertime {
   border-style: dashed, double;
   border-width: 5px;
