--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -24,7 +24,7 @@ body{
 </head>
 <body>
 	
-<img src="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fortnite-season-7-1052610.jpg?r=1543594824319">
+<img src="https://cdn.images.dailystar.co.uk/dynamic/184/photos/66000/620x/Fortnite-SKINS-LEAKED-All-new-update-4-5-skins-revealed-by-TwoEpicBuddies-coming-to-Shop-712503.jpg">
 Yo reeeeee,<br> I am ready to give thanks are you?<br>Sike! give thanks.<br> also this is my normal website because we should always be giving thanks to other fart faces
 <p>
 These are my favorite givingthanksgiving foods:
