--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -7,12 +7,13 @@ Thanksgiving
 <b>Happy Thanksgiving!</b>
 </head>
 <style type="text/css">
-color: green;
+{
+	color: green;
 	font-size: 68px;
 	font-family: Impact, Charcoal, sans-serif;
 	font-weight: bolder;
 	font-style: italic;}
-{
+}
 	border-style: dashed;
 	border-width: 4px;
 	border-color: red;
@@ -40,6 +41,7 @@ color: green;
 	padding left: 70 px;
 	margin: 42 px;
 }
+</head>
 </style>
 <h1>Hello People...................../
 <b>These are my favorite foods to eat at Thanksgiving:
