--- a/student_21/thanksgiving.html
+++ b/student_21/thanksgiving.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>  
 <html>
 <head>
-<title>My First Website</title>
+<title>My Thanksgiving Website</title>
 </head>
 <body>
 Thanksgiving
