--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -7,7 +7,7 @@ Thanksgiving
 <b>Happy Thanksgiving!</b>
 </head>
 <style type="text/css">
-{
+p{
 	color: green;
 	font-size: 68px;
 	font-family: Impact, Charcoal, sans-serif;
@@ -41,8 +41,9 @@ Thanksgiving
 	padding left: 70 px;
 	margin: 42 px;
 }
-</head>
 </style>
+</head>
+<body>
 <h1>Hello People...................../
 <b>These are my favorite foods to eat at Thanksgiving:
 <ol>
