--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -17,7 +17,7 @@ h1{
 #transition{
 	width:150px;
 	height: 50px;
-	background: white;
+	background: blue;
 	transition: height 1s;
 }
 #transition:hover{
