--- a/student_11/thanksgiving.html
+++ b/student_11/thanksgiving.html
@@ -4,6 +4,17 @@
 <title> Thanksgiving!
 </title>
 <style type="text/css">
+
+p{
+	border-style: solid;
+	border-color: red;
+	padding-top: 15 px;
+	padding-right: 50 px;
+	padding-bottom: 200 px;
+	padding-left: 100 px;
+	margin: 55 px;
+}
+
 body{
 	color: black;
 	font-size: 20px;
