--- a/student_11/thanksgiving.html
+++ b/student_11/thanksgiving.html
@@ -7,7 +7,7 @@
 
 p{
 	border-style: solid;
-	border-color: red;
+	border-color: black;
 	padding-top: 15 px;
 	padding-right: 50 px;
 	padding-bottom: 200 px;
