--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -75,6 +75,6 @@ My friends
 <ul>
 <li>school</li>
 <ul>
-(i like verything else in life)</p6>
+(i like everythin else in life)</p6>
 </body>
 </html>
