--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -26,20 +26,20 @@ p{
 #transition{
 	width:150px;
 	height: 50px;
-	background: beige;
+	background: green;
 	transition: height 2s;
 }
 #transition:hover{
 	height: 300px;
 }
 {
-	border-style: dashed;
-	border color: cyan;
-	padding top: 25 px;
-	padding right: 65 px:
-	padding bottom: 245 px;
-	padding left: 70 px;
-	margin: 42 px;
+	border-style: solid;
+	border-color:;
+	padding top: 25px;
+	padding right: 65px:
+	padding bottom: 245px;
+	padding left: 70px;
+	margin: 42px;
 }
 </style>
 </head>
