--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -43,7 +43,7 @@ Fav givingthanksgiving party games:
 </ol>
 </p>
 
-<marquee> Breaking news: rarararararararararara</marquee>
+<marquee> Breaking news: rarrarararrarrarararararaararblebalbalblablabalblablablablablablablablabalbla</marquee>
 <div id="transition"> Transition! </div>
 <br>
 <a href="http://www.Youtube.com"> Youtube, the one and only platform to get the <br> best <br> unlimitide <br> data <br> and <br> content <br> ever! <br>
