--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -47,8 +47,9 @@ Fav givingthanksgiving party games:
 <div id="transition"> Transition! </div>
 <br>
 <a href="http://www.Youtube.com"> Youtube, the one and only platform to get the <br> best <br> unlimitide <br> data <br> and <br> content <br> ever! <br>
-<a href="Evangel-aboutme.html">Ubnormal Page!</a>
-<img src="https://cdn.images.dailystar.co.uk/dynamic/184/photos/66000/620x/Fortnite-SKINS-LEAKED-All-new-update-4-5-skins-revealed-by-TwoEpicBuddies-coming-to-Shop-712503.jpg"><img src="https://img-9gag-fun.9cache.com/photo/aGjjPN0_460swp.webp"><br>
+<a href="Evangel-aboutme.html">Ubnormal Page!</a><br>
+Here are some cool memes to try out and see:
+<br><img src="https://img-9gag-fun.9cache.com/photo/aGjjPN0_460swp.webp"><br>
 
 
 </body>
