--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -41,6 +41,15 @@ Fav givingthanksgiving party games:
 <li>smake explosoins that are good</li>
 <li>dab like a dabing dad</li>
 </ol>
+
+Here are the top 5 games right now that are actualy good for a change NOT LiKe MINECRAFT mincraft sucks:
+<ol>
+<li>Fortnite</li>
+<li>Red Dead Redemption 2</li>
+<li>PugG</li>
+<li>Fallout</li>
+<li> Even though it should not be there minecraft UUUUUUUUUUUUUUUUUUUUGGGGGGGGGGGGGGGGGGGGGjHHHHHHHHHHHHHHHHHH</li>
+</ol>
 </p>
 
 <marquee> Breaking news: rarrarararrarrarararararaararblebalbalblablabalblablablablablablablablabalbla</marquee>
