--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -5,8 +5,8 @@
 </title>
 <style type="text/css">
 body{
-	color: blue;
-	font-size: 50;
+	color: purple;
+	font-size: 100;
 	font-family: "Times New Roman", Times, serif;
 	font-weight: bolder;
 	font-style: italic;
