--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -55,7 +55,7 @@ Here are the top 5 games right now that are actualy good for a change NOT LiKe M
 <marquee> Breaking news: rarrarararrarrarararararaararblebalbalblablabalblablablablablablablablabalbla</marquee>
 <div id="transition"> Transition! </div>
 <br>
-<a href="http://www.Youtube.com"> Youtube</a> the one and only platform to get the <br> best <br> unlimitide <br> data <br> and <br> content <br> ever! <br>
+<a href="http://www.Youtube.com" target="_blank"> Youtube</a> the one and only platform to get the <br> best <br> unlimitide <br> data <br> and <br> content <br> ever! <br>
 <a href="Evangel-aboutme.html">Ubnormal Page!</a><br>
 Here are some cool memes to try out and see:
 <br><img src="https://img-9gag-fun.9cache.com/photo/aGjjPN0_460swp.webp"><img src="https://media.giphy.com/media/8mkylSWajoh7QBCz5j/giphy.gif">
