--- a/student_17/GivingThanksGiving.html
+++ b/student_17/GivingThanksGiving.html
@@ -58,7 +58,7 @@ Here are the top 5 games right now that are actualy good for a change NOT LiKe M
 <a href="http://www.Youtube.com" target="_blank"> Youtube</a> the one and only platform to get the <br> best <br> unlimitide <br> data <br> and <br> content <br> ever! <br>
 <a href="Evangel-aboutme.html">Ubnormal Page!</a><br>
 Here are some cool memes to try out and see:
-<br><img src="https://img-9gag-fun.9cache.com/photo/aGjjPN0_460swp.webp"><img src="https://media.giphy.com/media/8mkylSWajoh7QBCz5j/giphy.gif">
+<br><img src="https://img-9gag-fun.9cache.com/photo/aGjjPN0_460swp.webp"><img src="https://media.giphy.com/media/8mkylSWajoh7QBCz5j/giphy.gif"><img scr="https://i.pinimg.com/474x/76/b5/47/76b547cf2bdc2195858b9c24865c54da.jpg">
 
 
 </body>
