--- a/student_21/Index.html
+++ b/student_21/Index.html
@@ -2,4 +2,10 @@
 <head>
 </head>
 <body>
-  </html>
+<header>
+  <a href = "/">
+    <img src = "picture.png"
+  </a>
+    <h1> The Coding School </h1>
+</header>
+</html>
