--- a/student_21/Index.html
+++ b/student_21/Index.html
@@ -8,4 +8,15 @@
   </a>
     <h1> The Coding School </h1>
 </header>
+<nav>
+  <ul>
+    <li><a href = "index.html"> Home </li>
+    <li><a href = "about.html"> About Us </li>
+    <li><a href = "gallery.html"> Gallery </li>
+    <li><a href = "contact.html"> Contact Us </li>
+  </ul>
+  </nav>
+  <footer>
+  Created By Github!
+  </body>
 </html>
