--- a/student_14/index.html
+++ b/student_14/index.html
@@ -18,7 +18,7 @@
   </ul>
 </nav>
 <footer>
-Created by Hajime Inc. (Toooootally just as successful as Tesla)
+Created by Hajime Inc. 
 </footer>
 </body>
 </html>
