--- a/student_16/index.html
+++ b/student_16/index.html
@@ -11,9 +11,9 @@
 <nav>
   <ul>
    <li><a href = "index.html> Home(mes) </a></li>
-   <li><a href = "aboutme.html> About Me(mes) </a></li>
-   <li><a href = "gallery.html> Gallery(eet) </a></li>
-   <li><a href = "contactus.html> Contact Us </a></li>
+   <li><a href = "lolm8.html> About Me(mes) </a></li>
+   <li><a href = "Banana.html> Gallery(eet) </a></li>
+   <li><a href = "What.html> Contact Us </a></li>
   </ul>
   </nav>
   <footer>
