--- a/student_02/index.html
+++ b/student_02/index.html
@@ -9,7 +9,7 @@
 </header>
 <nav>
 <ul>
-<li><<a href = "index.html"> Home </li> 
+<li><a href = "index.html"> Home </li> 
 <li><a href = "about.html"> About me </li> 
 <li><a href = "gallery.html"> Gallery </li> 
 <li><a href = "contact.html"> Contact Me </li> 
