--- a/student_13/index.html
+++ b/student_13/index.html
@@ -12,8 +12,8 @@
   <ul>
 <li><a href = "index.html"> Home </a></li>
 <li><a href = "about.html"> About us </a></li>
-<li><a href = "gallery.html"  Gallery </a></li>
-<li><a href = "contact.html"  Contact us </a></li>
+<li><a href = "gallery.html">  Gallery </a></li>
+<li><a href = "contact.html">  Contact us </a></li>
   </ul>
 </nav>
 <footer>
