--- a/student_16/index.html
+++ b/student_16/index.html
@@ -4,7 +4,7 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "image.png"
+    <img scr = "HolyBible.png"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
 </header>
