--- a/student_16/index.html
+++ b/student_16/index.html
@@ -5,6 +5,7 @@
 <header>
   <a href = "/">
     <img scr = "HolyBible.png"
+         <img scr = "Thanos.png"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
 </header>
