--- a/student_17/index.html
+++ b/student_17/index.html
@@ -4,7 +4,7 @@
 <body>
 <header>
   <h1>
-  Yo wwwwwaaaaaassssssaaaaaaaaaaaapppppp!
+  Yo Phill Swift here with Flex tape the super strong waterproof tape , I sawwwed this bot in haf THATS ALOTA DAAAMMMADGE!
   </h1> 
 </header>
 <nav>
