--- a/student_24/Gamer.html
+++ b/student_24/Gamer.html
@@ -4,7 +4,7 @@
 <body>
 <style type="text/css">
 p{
-	color: green;
+	color: ;
 	font-size: 68px;
 	font-family: Impact, Charcoal, sans-serif;
 	font-weight: bolder;
@@ -12,7 +12,7 @@ p{
 }
 {
 	border-style: dashed;
-	border-width: 4px;
+	border-width: 4in;
 	border-color: red;
 	background-image: url("http://getwallpapers.com/wallpaper/full/d/6/b/397186.jpg")
 }
