--- a/student_15/index.html
+++ b/student_15/index.html
@@ -10,7 +10,7 @@
 </header>
 <nav>
   <ul>
-    <li><a href = "Home link"> Home </a></li>
+    <li><a href = ""> Home </a></li>
     <li><a href = "Home link"> Gallery </a></li>
     <li><a href = "Home link"> About Us </a></li>
     <li><a href = "Home link"> Contact Us </a></li>
