--- a/student_16/index.html
+++ b/student_16/index.html
@@ -5,7 +5,7 @@
 <header>
   <a href = "/">
     <img scr = "HolyBible.png"
-         <img scr = "Thanos.png"
+         <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwicnva--_DfAhXT-lQKHfkWCWkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pngkey.com%2Ftop%2F2%2F&psig=AOvVaw2xaDzGC_9UCOChqJ2kJ94A&ust=1547682162817712"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
 </header>
