--- a/student_15/index.html
+++ b/student_15/index.html
@@ -10,9 +10,9 @@
 </header>
 <nav>
   <ul>
-    <li><a href = ""> Home </a></li>
+    <li><a href = "roosevelt-coding.github.io/student_15/index.html"> Home </a></li>
     <li><a href = "Home link"> Gallery </a></li>
-    <li><a href = "Home link"> About Us </a></li>
+    <li><a href = "roosevelt-coding.github.io/student_15/About Me"> About Us </a></li>
     <li><a href = "Home link"> Contact Us </a></li>
   </ul>
 </nav>
