--- a/student_16/index.html
+++ b/student_16/index.html
@@ -18,7 +18,7 @@
   </ul>
   </nav>
   <footer>
-  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i made this Damian Michael Hernandez IG:@pandagamer258k9 YT: PandaGamer258K9
+  #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i made this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 YT: PandaGamer258K9
   </footer>
 </body>
 </html>
