--- a/student_16/index.html
+++ b/student_16/index.html
@@ -13,7 +13,7 @@
   <ul>
    <li><a href = "index.html> Home(mes) </a></li>
    <li><a href = "lolm8.html> About Me(mes) </a></li>
-   <li><a href = "Banana.html> Gallery(eet) </a></li>
+   <li><a href = "Gallery> Gallery(eet) </a></li>
    <li><a href = "What.html> Contact Us </a></li>
   </ul>
   </nav>
