--- a/student_26/About.html
+++ b/student_26/About.html
@@ -1,1 +1,23 @@
-
+<html>
+<head>
+</head>
+<body>
+<header>
+ <a href = "/">
+  <img src = "picture.png">
+ </a>
+ <h1> The Coding School </h1>
+</header>
+<nav>
+ <ul>
+ <li><a href = "index.html"> Home </a></li>
+ <li><a href = "about.html"> About Us </a></li>
+ <li><a href = "gallery.html"> Gallery </a></li>
+ <li><a href = "contact.html"> Contact Us </a></li>
+ </ul>
+</nav>
+<footer>
+Created by Me!
+</footer>
+</body>
+</html>
