--- a/student_22/index.html
+++ b/student_22/index.html
@@ -7,14 +7,17 @@
 <img src = "picture.png" /> 
 <a/>
 <h1> The Coding School</h1>
- <ul>
+  </header>
+ <nav>
+  <ul>
  <li><a href = "index.html"> Home </a></li>
  <li><a href = "gallery.html"> Gallery </a></li>
- <li><a href =  "about.html">About Us </li>
- <li> Contact Us </li>
- 
- 
- </ul>
-</header>
+ <li><a href =  "about.html"> About Us </li>
+ <li><a href = "contact us.html"> Contact Us </li>
+  </ul>
+ </nav>
 </body>
+ <footer> 
+  Created BY MEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
+   </footer>
 </html>
