--- a/student_14/Gallery.html
+++ b/student_14/Gallery.html
@@ -4,7 +4,7 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "HolyBible.png"
+    <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjhzp3C_PDfAhWpilQKHbnmDyYQjRx6BAgBEAU&url=https%3A%2F%2Fclosed.pizza%2Fposts%2F1262774&psig=AOvVaw0p-FJg4PyLTAvPaWpRQbY8&ust=1547682363717269"
          <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwicnva--_DfAhXT-lQKHfkWCWkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pngkey.com%2Ftop%2F2%2F&psig=AOvVaw2xaDzGC_9UCOChqJ2kJ94A&ust=1547682162817712"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
