--- a/student_17/gallery.html
+++ b/student_17/gallery.html
@@ -4,7 +4,7 @@
 <body>
 <header>
   <h1>
-  Yo Phill Swift here with Flex tape the super strong waterproof tape , I sawwwed this boat in haf THATS ALOTA DAAAMMMADGE!
+  Just So You Know These are All Off Fil swift'ss hidden images and pics btw
   </h1> 
 </header>
 <nav>
