Update GET FREE VBUCKS WITH NO HASSLE.html

--- a/student_12/GET FREE VBUCKS WITH NO HASSLE.html
+++ b/student_12/GET FREE VBUCKS WITH NO HASSLE.html
@@ -1,4 +1,25 @@
-<!DOCTYPE HTML>
+<html>
+<head>
+</head>
+<body>
+<header>
+<a href = "/">
+  <img src = "">
+</a>
+<h1> FREE VBUCKS </h1>
+</header>
+<nav>
+  <ul>
+    <li><a href = "index.html"> Home </a> </li>
+    <li><a href = "about.html"> about us </a></li>
+    <li><a href = "gallery.html"> gallery </li>
+    <li><a href = "contact.html"> contact us </a></li>
+  </ul>
+<footer>
+Created by me!
+</footer>d
+</body>
+</html><!DOCTYPE HTML>
 <html>
 <head>
 <title>GET FREE VBUCKS WITH NO HASSLE LMAO THIS IS FAKE EEEEEEEEEEEEE YOU NEED MENTAL HELP LOLOLOLOLOL </title>
