--- a/student_16/index.html
+++ b/student_16/index.html
@@ -4,7 +4,7 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "HolyBible.png"
+    <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiykZrS_PDfAhWn0FQKHWsZBQ8QjRx6BAgBEAU&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fcursedimages%2Fcomments%2F9q70pr%2Fcursed_bible%2F&psig=AOvVaw1cihIhkcYRWPOu-ebg8ljq&ust=1547682474009762"
          <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwicnva--_DfAhXT-lQKHfkWCWkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pngkey.com%2Ftop%2F2%2F&psig=AOvVaw2xaDzGC_9UCOChqJ2kJ94A&ust=1547682162817712"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
