--- a/student_02/index.html
+++ b/student_02/index.html
@@ -10,7 +10,7 @@
 <nav>
 <ul>
 <li><a href = "index.html"> Home </li> 
-<li><a href = "about.html"> About me </li> 
+<li><a href = "IbrahimAhmed.html"> About me </li> 
 <li><a href = "gallery.html"> Gallery </li> 
 <li><a href = "contact.html"> Contact Me </li> 
 </ul>
