--- a/student_16/index.html
+++ b/student_16/index.html
@@ -12,7 +12,7 @@
 <nav>
   <ul>
    <li><a href = "lolm8.html> About Me(mes) </a></li>
-   <li><a href = "Gallery> Gallery(eet) </a></li>
+   <li><a href = "Gallery.html> Gallery(eet) </a></li>
    <li><a href = "What.html> Contact Us </a></li>
   </ul>
   </nav>
