--- a/student_15/index.html
+++ b/student_15/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li><a href = "https://roosevelt-coding.github.io/student_15/index.html"> Home </a></li>
     <li><a href = "Home link"> Gallery </a></li>
-    <li><a href = "roosevelt-coding.github.io/student_15/About Me"> About Us </a></li>
+    <li><a href = "C:\Users\HGUS8534\Downloads\About Me (10)"> About Us </a></li>
     <li><a href = "Home link"> Contact Us </a></li>
   </ul>
 </nav>
