--- a/student_17/about.html
+++ b/student_17/about.html
@@ -4,15 +4,15 @@
 <body>
 <header>
   <h1>
-  Yo Phill Swift here with Flex tape the super strong waterproof tape , I sawwwed this boat in haf THATS ALOTA DAAAMMMADGE!
+I have nohing to tell you about me
   </h1> 
 </header>
 <nav>
   <ul>
     <li><a herf = "index.html"> index </a></li>
-    <li><a herf = "about us.html"> about us </a></li>
+    <li><a herf = "about.html"> about us </a></li>
     <li><a herf = "gallery.html"> gallery </a></li>
-    <li><a herf = "contact us.html"> contact us </a></li>
+    <li><a herf = "contact.html"> contact us </a></li>
   </ul>
   <a href = "/">
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
