--- a/student_14/Gallery.html
+++ b/student_14/Gallery.html
@@ -12,8 +12,8 @@
 <nav>
   <ul>
    <li><a href = "index.html> Home(mes) </a></li>
-   <li><a href = "lolm8.html> About Me(mes) </a></li>
-   <li><a href = "What.html> Contact Us </a></li>
+   <li><a href = "AboutMe.html> About Me(mes) </a></li>
+   <li><a href = "Contact.html> Contact Us </a></li>
   </ul>
   </nav>
   <footer>
