--- a/student_15/index.html
+++ b/student_15/index.html
@@ -10,10 +10,10 @@
 </header>
 <nav>
   <ul>
-    <li><a href = "https://roosevelt-coding.github.io/student_15/index.html"> Home </a></li>
-    <li><a href = "Home link"> Gallery </a></li>
-    <li><a href = "C:\Users\HGUS8534\Downloads\About Me (10)"> About Us </a></li>
-    <li><a href = "Home link"> Contact Us </a></li>
+    <li><a href = "index.html"> Home </a></li>
+    <li><a href = "Gallery"> Gallery </a></li>
+    <li><a href = "About Me"> About Us </a></li>
+    <li><a href = Contact Us"> Contact Us </a></li>
   </ul>
 </nav>
 <footer>
