--- a/student_16/index.html
+++ b/student_16/index.html
@@ -11,9 +11,9 @@
 </header>
 <nav>
   <ul>
-   <li><a href = "lolm8.html> About Me(mes) </a></li>
+   <li><a href = "AboutMe.html> About Me(mes) </a></li>
    <li><a href = "Gallery.html> Gallery(eet) </a></li>
-   <li><a href = "What.html> Contact Us </a></li>
+   <li><a href = "Contact.html> Contact Us </a></li>
   </ul>
   </nav>
   <footer>
