--- a/student_31/index.html
+++ b/student_31/index.html
@@ -10,7 +10,7 @@
 </header>
 <nav>
   <ul>
-    <li><a href = "index.html"> </a>Home </li>
+    <li><a href = "index.html"> Home </a></li>
     <li><a href = "about.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact </a></li>
