--- a/student_15/index.html
+++ b/student_15/index.html
@@ -11,9 +11,9 @@
 <nav>
   <ul>
     <li><a href = "index.html"> Home </a></li>
-    <li><a href = "Gallery"> Gallery </a></li>
-    <li><a href = "About Me"> About Us </a></li>
-    <li><a href = Contact Us"> Contact Us </a></li>
+    <li><a href = "Gallery.html"> Gallery </a></li>
+    <li><a href = "About Me.html"> About Us </a></li>
+    <li><a href = Contact Us.html"> Contact Us </a></li>
   </ul>
 </nav>
 <footer>
