--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -13,7 +13,7 @@
   <ul>
    <li><a href = "index.html> Home(mes) </a></li>
    <li><a href = "AboutMe.html> About Me(mes) </a></li>
-   <li><a href = "Gallery.html> Contact Us </a></li>
+   <li><a href = "Gallery.html> Gallery </a></li>
   </ul>
   </nav>
   <footer>
