--- a/student_16/AboutMe.html
+++ b/student_16/AboutMe.html
@@ -4,8 +4,8 @@
 <body>
 <header>
   <a href = "/">
-    <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwifxdD__fDfAhWH51QKHbkBCQwQjRx6BAgBEAU&url=http%3A%2F%2Fdragonballfanon.wikia.com%2Fwiki%2FFile%3ARandom.png&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
-         <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwi0wq-I_vDfAhWJhVQKHW1kCpcQjRx6BAgBEAU&url=https%3A%2F%2Fpetapixel.com%2F2019%2F01%2F14%2Frandom-egg-photo-smashes-record-for-most-liked-instagram-photo%2F&psig=AOvVaw3-HwnB7tbFfdL3YT5smC0Q&ust=1547682827043449"
+    <img scr = "https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FxIuaacLbOVU%2Fmaxresdefault.jpg&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DxIuaacLbOVU&docid=3QCv_UxTU0hs5M&tbnid=Dfwjqg9dVFB0WM%3A&vet=10ahUKEwiujJXa_vDfAhWEAnwKHWF3AtAQMwhMKAEwAQ..i&w=1280&h=720&bih=969&biw=1920&q=phil%20swift%20fortnite&ved=0ahUKEwiujJXa_vDfAhWEAnwKHWF3AtAQMwhMKAEwAQ&iact=mrc&uact=8"
+         <img scr = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjW8fvo_vDfAhVollQKHTFPBSgQjRx6BAgBEAU&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fyeet&psig=AOvVaw12xFYOoXd1CHGScQQLBO6g&ust=1547683046693926"
   </a>
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
 </header>
