--- a/student_26/ErnestAboutMe.html
+++ b/student_26/ErnestAboutMe.html
@@ -10,7 +10,7 @@ Information you will put in the body of the website
 
 <p>
 This is my favorite song 
-<a href="https://www.youtube.com/watch?v=HANbmbNU5vI&t=1565s"> SAD! </a>
+<a href="https://www.youtube.com/watch?v=X2R-BDYyqAw"> Moonlight(Nightcore) </a>
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1wcnWN4t3wqS_jKqMCN7XGvoZkJsP8P5G5DD4MfSP-XN_ww8Vfw"><img>
 </p>
