--- a/student_11/about.html
+++ b/student_11/about.html
@@ -12,8 +12,8 @@
   <ul>
     <li><a href = "index.html"> Home </a></li>
     <li><a href = "about.html"> About </a></li>
-    <li><a href = "gallery.html> Gallery </a></li>
-    <li><a href = "contact.html> Contact Us </a></li>
+    <li><a href = "gallery.html"> Gallery </a></li>
+    <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
 <footer>
