--- a/student_02/contact.html
+++ b/student_02/contact.html
@@ -7,7 +7,8 @@
 <img src="picture.png">
 </a>
 <font color="green">
-<h1> Contact me at iaaa5655194166@gmail.com </h1>
+<h1> Contact Me </h1>
+  <h2> Email: iaaa5655194166@gmail.com <h2>
 </header>
 <nav>
 <ul>
