--- a/student_17/about.html
+++ b/student_17/about.html
@@ -16,7 +16,7 @@ I have nohing to tell you about me
   </ul>
   <a href = "/">
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
-    <img scr ="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fortnite-Season-7-start-date-skins-battle-pass-1050280.jpg">
+    <img scr ="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/4bc4a8ff-42f1-4393-b5b5-34dc71251c57/dciorjm-34e7bac1-43c5-4f4f-9cd6-a24edcf8c795.png/v1/fit/w_300,h_765,q_70,strp/phil_swift_by_contraneo_dciorjm-300w.jpg">
    <img scr ="https://i.imgflip.com/2lsj4d.jpg">
   </a>
 </nav>
