--- a/student_17/about.html
+++ b/student_17/about.html
@@ -21,7 +21,7 @@ I have nohing to tell you about me
   </a>
 </nav>
 <footer>
-Created by thatonedude zombs rOyavcle name
+Created by thatonedude zombs royaleavcle name
 </footer>
 </body>
 </html>
