--- a/student_02/gallery.html
+++ b/student_02/gallery.html
@@ -1,7 +1,9 @@
 
 <html>
 <head>
+    <link rel - "stylesheet" type="text/css" href = "mystyle.css">
 <body>
+  </head>
 <header>
 <a href = "/">
 <img src="picture.png">
