--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -9,10 +9,10 @@ I no have no contact info and if I giv you one I no tell you
 </header>
 <nav>
   <ul>
-    <li><a herf = "index.html"> index </a></li>
-    <li><a herf = "about.html"> about </a></li>
-    <li><a herf = "gallery.html"> gallery </a></li>
-    <li><a herf = "contact.html"> contact </a></li>
+    <li><a href = "index.html"> index </a></li>
+    <li><a href = "about.html"> about </a></li>
+    <li><a href = "gallery.html"> gallery </a></li>
+    <li><a href = "contact.html"> contact </a></li>
   </ul>
   <a href = "/">
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
