--- a/student_15/about.html
+++ b/student_15/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE  html>
 <html>
 <head>
+  <link rel= "Styleheet" type "txt/css" href= "mystyle.css">
 <title>Henry Guske/About me
 </title>
 <style type="text/css">
