--- a/student_17/about.html
+++ b/student_17/about.html
@@ -17,7 +17,7 @@ I have nohing to tell you about me
   <a href = "/">
      <img src = "https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattleBundle-601x401-643f37a393b6334c1c1a437eb62d99c3ca307173.png">
     <img scr ="https://cdn2.unrealengine.com/Fortnite%2FBattle-pass%2FSeason-7%2FBR07_Web_BattlePass-635x401-939032decb421e3c1426dfd97a9f91f2af07d60e.png">
-   <img scr ="https://i.imgflip.com/2lsj4d.jpg">
+   <img scr ="https://i.ytimg.com/vi/1osOkUluiVE/hqdefault.jpg">
   </a>
 </nav>
 <footer>
