--- a/student_17/about.html
+++ b/student_17/about.html
@@ -21,7 +21,7 @@ I have nohing to tell you about me
   </a>
 </nav>
 <footer>
-Created by thatonedude zombs royaleavcle name
+Created by thatonedude zombs royale name 11 dubs btw. 6 solo 3 squad and 2 duo wins. leaderboard bro
 </footer>
 </body>
 </html>
