--- a/student_17/about.html
+++ b/student_17/about.html
@@ -22,6 +22,8 @@ I have nohing to tell you about me
 </nav>
 <footer>
 Created by thatonedude zombs royale name 11 dubs btw. 6 solo 3 squad and 2 duo wins. leaderboard bro
+  
+ Also crated by Hightower incorporated "YOur job is our job, especially if it is involved with fortnite or Phil Swift!"
 </footer>
 </body>
 </html>
