--- a/student_11/gallery.html
+++ b/student_11/gallery.html
@@ -6,7 +6,7 @@
   <a href = "/">
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTz6Jj9vSrXy5rj7tN6sCByVOp88qSogogexHA_K82V2QttTgJZ"
   </a>
-  <h1> The Chungus Club </h1>
+  <h1> The Chungus Gallery </h1>
 </header>
 <nav>
   <ul>
