--- a/student_16/index.html
+++ b/student_16/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel = "stlesheet" type="text/css" href="mystyle.css">
+  <link rel = "stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 <header>
