--- a/student_09/index.html
+++ b/student_09/index.html
@@ -16,6 +16,9 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
+<h1>
+If you wnat to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
+</h1>
 <footer>
 Created by Me!
 </footer>
