--- a/student_09/home.html
+++ b/student_09/home.html
@@ -9,8 +9,20 @@
   <h1> Homepage </h1>
 </header>
 <p1>
-You made it !! th
+You made it !! this is the hompage. here you will learn all about me!!  
 </p1>
+</p2>
+Question 1 : what is your favorite color?
+</p2>
+<p3>
+  h1{
+	color: blue;
+	font-family: Lucida Sans Unicode, sans-serif;
+}
+</p3>
+<h1>
+  Answer : Blue
+</h1>
 <footer>
 Created by Me!
 </footer>
