--- a/student_17/gallery.html
+++ b/student_17/gallery.html
@@ -20,6 +20,7 @@
     <img scr ="https://cdn.images.express.co.uk/img/dynamic/143/590x/Fortnite-Season-7-start-date-skins-battle-pass-1050280.jpg">
   <img src = "https://cdn.drawception.com/drawings/H5zp5HaLgR.png">
     <img src = "https://mtgcardsmith.com/view/complete/full/2018/6/25/1529950820389260.png">
+    <img src = "https://i.imgflip.com/2hamkh.jpg">
   </a>
 </nav>
 <footer>
