--- a/student_09/home.html
+++ b/student_09/home.html
@@ -11,18 +11,19 @@
 <p1>
 You made it !! this is the hompage. here you will learn all about me!!  
 </p1>
-</p2>
+</h1>
 Question 1 : what is your favorite color?
-</p2>
+</h1>
 <p3>
-  h1{
+<style type="text/css"> 
+h2{
 	color: blue;
 	font-family: Lucida Sans Unicode, sans-serif;
 }
 </p3>
-<h1>
+<h2>
   Answer : Blue
-</h1>
+</h2>
 <footer>
 Created by Me!
 </footer>
