--- a/student_17/gallery.html
+++ b/student_17/gallery.html
@@ -21,6 +21,7 @@
   <img src = "https://cdn.drawception.com/drawings/H5zp5HaLgR.png">
     <img src = "https://mtgcardsmith.com/view/complete/full/2018/6/25/1529950820389260.png">
     <img src = "https://i.imgflip.com/2hamkh.jpg">
+      <img src = "https://media1.tenor.com/images/14f54e957116eb95939f9518baeed005/tenor.gif?itemid=9803539">
   </a>
 </nav>
 <footer>
