--- a/student_16/index.html
+++ b/student_16/index.html
@@ -12,7 +12,7 @@
 </header>
 <nav>
   <ul>
-   <li><a href = "AboutMe.html> About Me(mes) </a></li>
+   <li><a href = "AboutMe.html"> About Me(mes) </a></li>
    <li><a href = "Gallery.html> Gallery(eet) </a></li>
    <li><a href = "Contact.html> Contact Us </a></li>
   </ul>
