--- a/student_15/index.html
+++ b/student_15/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel= "Styleheet" type "txt/css" href= "mystyle.css">
+  <link rel= "styleheet" type "txt/css" href= "mystyle.css">
 </head>
 <body>
 <header>
