--- a/student_16/index.html
+++ b/student_16/index.html
@@ -4,16 +4,16 @@
 </head>
 <body>
 <header>
-    <img scr = "https://i.pinimg.com/736x/fd/1b/43/fd1b43e4ae73a3d6205e7bd64784daba.jpg"
-         <img scr = "https://i.redd.it/b4gcrydourg01.jpg"
+    <img src = "https://i.pinimg.com/736x/fd/1b/43/fd1b43e4ae73a3d6205e7bd64784daba.jpg"/>
+         <img src = "https://i.redd.it/b4gcrydourg01.jpg"/>
   
   <h1> The Lit Boii Meme Yeet Oof LOL </h1>
 </header>
 <nav>
   <ul>
    <li><a href = "AboutMe.html"> About Me(mes) </a></li>
-   <li><a href = "Gallery.html> Gallery(eet) </a></li>
-   <li><a href = "Contact.html> Contact Us </a></li>
+   <li><a href = "Gallery.html"> Gallery(eet) </a></li>
+   <li><a href = "Contact.html"> Contact Us </a></li>
   </ul>
   </nav>
   <footer>
