--- a/student_09/index.html
+++ b/student_09/index.html
@@ -14,10 +14,11 @@
     <li><a href = "about.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
+    <li><a href = "hi.html"> Some werid website i did </a></li>
   </ul>
 </nav>
 <h1>
-If you wnat to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
+If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
 </h1>
 <footer>
 Created by Me!
