--- a/student_16/index.html
+++ b/student_16/index.html
@@ -16,6 +16,10 @@
    <li><a href = "Contact.html"> Contact Us </a></li>
   </ul>
   </nav>
+  
+   <img src = "https://i.pinimg.com/736x/fd/1b/43/fd1b43e4ae73a3d6205e7bd64784daba.jpg"/>
+         <img src = "https://i.redd.it/b4gcrydourg01.jpg"/>
+  
   <footer>
   #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i made this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 YT: PandaGamer258K9
   </footer>
