--- a/student_22/index.html
+++ b/student_22/index.html
@@ -1,6 +1,10 @@
 <html>                                                                            
 <head>
  <link rel = "stylesheet" type="text/css" href = "mystyle.css">
+ <font-family:arial;
+ float:left;
+ margin-left:10px;
+ width:640px;>
 </head>
 <body>
 <header>
