--- a/student_22/index.html
+++ b/student_22/index.html
@@ -1,7 +1,7 @@
 <html>                                                                            
 <head>
  <link rel = "stylesheet" type="text/css" href = "mystyle.css">
- <font-family:arial;
+ <font-family:impact;
  float:left;
  margin-left:10px;
  width:640px;>
