--- a/student_17/about.html
+++ b/student_17/about.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+<title>
+  About Me
+  </title>
 </head>
 <body>
 <header>
