--- a/student_16/index.html
+++ b/student_16/index.html
@@ -17,8 +17,8 @@
   </ul>
   </nav>
   
-   <img src = "https://i.pinimg.com/736x/fd/1b/43/fd1b43e4ae73a3d6205e7bd64784daba.jpg"/>
-         <img src = "https://i.redd.it/b4gcrydourg01.jpg"/>
+  <img src = "https://pm1.narvii.com/6842/fcfba2f183ce7f78d03a84db8fd1e5896d618dc8v2_hq.jpg"/>
+  <img src = "https://cdn2-www.gamerevolution.com/assets/uploads/2019/01/Fortnite-season-7-week-8-challenges-cheat-sheet.jpg"/>
   
   <footer>
   #PressFToPayYourRespects #RipInTheChat #DamianLeftTheChat #SubToPewdiepie # Lol i made this Damian Michael Hernandez SC: PandaGamer258K9 IG:@pandagamer258k9 YT: PandaGamer258K9
