--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+  <title>
+    Contact
+  </title>
 </head>
 <body>
 <header>
