--- a/student_21/index.html
+++ b/student_21/index.html
@@ -5,7 +5,7 @@
 <body>
 <header>
   <a href = "/">
-    <img src = "picture.png"
+    <img src = "picture.png">
   </a>
     <h1> The Coding School </h1>
 </header>
