--- a/student_09/index.html
+++ b/student_09/index.html
@@ -4,8 +4,7 @@
 </head>
 <body>
 <header>
-  <a href = "/">
-    <img src = "picture.png" />
+    <img src =  />
   </a>
   <h1> The Coding School </h1>
 </header>
