--- a/student_19/index.html
+++ b/student_19/index.html
@@ -10,7 +10,7 @@
 
   <a href = "/">
 
-    <img src = "picture.png" />
+    <img src = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj5uN_wz4LgAhWJjFQKHd2MAa8QjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCommon_goldfish&psig=AOvVaw1UNwbBtlZzF0-uhVmk8az7&ust=1548288928501666" />
 
   </a>
 
