--- a/example/table.html
+++ b/example/table.html
@@ -15,9 +15,14 @@
 .left {
   width: 25%;
 }
+    
+.left h2 {
+	background-color: pink;
+}
 
 .right {
-  width: 75%;
+	width: 75%;
+	border-left-style: inset;
 }
 
 /* Clear floats after the columns */
