--- a/student_21/index.html
+++ b/student_21/index.html
@@ -3,6 +3,16 @@
   <link rel = "stylesheet" type="text/css" href = "mystyle.css>
 </head>
 <body>
+<div class="row">
+  <div class="column left" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column right" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
 <header>
   <a href = "/">
     <img src = "picture.png">
