--- a/student_09/index.html
+++ b/student_09/index.html
@@ -20,6 +20,9 @@
 <h1>
 If you want to see a Thanksgiving page <a href = "thanksgiving.html"> Press Me! </a></li>
 </h1>
+<h2> poeple who are viewing this are poeple who have nothing to do ;) If you not Bored plz leave :I </h2>
+<h3>Welcome bordies here you will learn about me a fellow memeber of your team :) but letting you know ....</h3>
+<p>This is the <b>coolest</b> site ever!</p>
 <footer>
 Created by Me!
 </footer>
