--- a/example/table.html
+++ b/example/table.html
@@ -39,11 +39,11 @@
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Some text..</p>
+    <p>Jello persona yo wasap</p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Some text..</p>
+    <p>Anoher wassap I dunno wa else to se</p>
   </div>
 </div>
 
