--- a/student_28/index.html
+++ b/student_28/index.html
@@ -19,6 +19,16 @@
   <h1> Not the Coding School </h1>
 
 </header>
+<div class="row">
+  <div class="column left" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Jello persona yo wasap</p>
+  </div>
+  <div class="column right" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Anoher wassap I dunno wa else to se</p>
+  </div>
+</div>
 
 <nav>
 
