--- a/student_15/index.html
+++ b/student_15/index.html
@@ -10,11 +10,20 @@
   <h1> Your Best Dream </h1>
 </header>
 <nav>
-  <ul>
-    <li><a href = "index.html"> Home </a></li>
+  <ul><div class="row">
+  <div class="column left" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>
+    Other Sites for you to check out:
+    </p>
+  </div>
+  <div class="column right" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p><li><a href = "index.html"> Home </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "about.html"> About Us </a></li>
-    <li><a href = "contact.html"> Contact Us </a></li>
+    <li><a href = "contact.html"> Contact Us </a></li></p>
+  </div>
   </ul>
 </nav>
 <footer>
