--- a/student_17/index.html
+++ b/student_17/index.html
@@ -30,11 +30,11 @@
   <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Some text..</p>
+    <p>Yo sup flex tup</p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Some text..</p>
+    <p>I dunno wa else to say so CRAKY</p>
   </div>
 </div>
 <header>
